<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividadfinal.SignUpFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:contentDescription="@string/imageDescRegister"
        android:src="@drawable/signupbck"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeader"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeader2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBody"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFooter"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/registerHeader"
        android:fontFamily="@font/cabin_bold"
        android:layout_marginTop="45dp"
        android:textSize="38sp"
        android:textAppearance="@color/white"
        app:layout_constraintTop_toTopOf="@+id/glHeader"
        app:layout_constraintLeft_toRightOf="@id/glStart"
        app:layout_constraintRight_toLeftOf="@id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/cabin"
        android:text="@string/registerSubHeader"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/glStart"
        app:layout_constraintRight_toLeftOf="@id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etName"
        android:autofillHints="Nameee test"
        android:hint="@string/formName"
        android:drawableStart="@drawable/ic_user"
        android:background="#80FFFFFF"
        android:layout_marginBottom="40dp"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/glHeader2"
        app:layout_constraintBottom_toTopOf="@id/etLastName"
        app:layout_constraintLeft_toRightOf="@id/glStart"
        app:layout_constraintRight_toLeftOf="@id/glEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etLastName"
        android:autofillHints="name"
        android:hint="@string/formLastName"
        android:drawableStart="@drawable/ic_user"
        android:background="#80FFFFFF"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:autofillHints="emailAddress"
        android:hint="@string/formEmail"
        android:drawableStart="@drawable/ic_email"
        android:background="#80FFFFFF"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:autofillHints="password"
        android:hint="@string/formPassword"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_pwd"
        android:background="#80FFFFFF"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbWoman"
            android:text="@string/rgOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbMan"
            android:text="@string/rgOption2"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbNotSay"
            android:layout_marginStart="10dp"
            android:text="@string/rgOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:id="@+id/btRegistrar"
        android:text="@string/btnRegister"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toTopOf="@id/glBody"
        android:layout_width="0dp"
        android:layout_height="55dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>