<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividadfinal.LoginFragment">

    <ImageView
        android:contentDescription="@string/imageDescLogin"
        android:src="@drawable/signupbck"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeader"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeader2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHeader3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBody"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/loginHeader"
        android:fontFamily="@font/cabin_bold"
        android:layout_marginTop="45dp"
        android:textSize="38sp"
        android:textAppearance="@color/white"
        app:layout_constraintTop_toTopOf="@+id/glHeader"
        app:layout_constraintLeft_toRightOf="@id/glStart"
        app:layout_constraintRight_toLeftOf="@id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/cabin"
        android:text="@string/loginSubHeader"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/glStart"
        app:layout_constraintRight_toLeftOf="@id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/etEmail"
        android:autofillHints="emailAddress"
        android:hint="@string/formEmail"
        android:drawableStart="@drawable/ic_email"
        android:background="@color/gray"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@+id/glHeader3"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        android:autofillHints="password"
        android:hint="@string/formPassword"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_pwd"
        android:background="@color/gray"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@+id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btLogin"
        android:text="@string/btnLogin"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toTopOf="@id/glBody"
        android:layout_width="0dp"
        android:layout_height="55dp"/>

    <Button
        android:id="@+id/btToRegister"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="70dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/loginFooter"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/glFooter"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>